--- a/RST/_static/sslides-custom.css
+++ b/RST/_static/sslides-custom.css
@@ -2,7 +2,15 @@
 
     padding: 20px 20px;
     display: block;
-
+    border: none;
     width: auto;
     height: auto;
+    box-shadow: none;
+    -webkit-transition: none;
+    transition: none;
+    -webkit-border-radius: unset;
+}
+
+body {
+    background: white;
 }
